# aoc2024

./: Cargo.toml  README.md
src/: main.rs
src/day1/: mod.rs
